docroot/themes/custom/transac/alshaya_white_label/sass/components/header/_header-primary.scss
/* ... */
.mobile--close {
  background: $header_mobile_menu_close_bg;
  position: fixed;
  top: 0.5rem;
  #{$left}: -100%;
  width: 35px;
  height: 1.9375rem;
  z-index: 12;
  text-align: center;
  padding-top: 0.25rem;
  will-change: $left;
  -moz-transition: #{$left 0.5s ease-in-out};
  transition: #{$left 0.5s ease-in-out};
  -moz-transform: translateZ(0);

  span {
    background: url('../imgs/icons/ic-close.svg') center center no-repeat;
    width: 25px;
    height: 25px;
    display: inline-block;
    background-size: 17px;
  }
}

.block-alshaya-main-menu {
  li.menu--one__list-item {
    a.promo-panel--mobile-link {
      position: relative;

      @include icon(chevron#{$right}, after) {
        color: $header_mobile_menu_arrow;
        font-size: 1.313rem;
        cursor: pointer;
        pointer-events: none;
        float: $right;
        width: 1.3125rem;
        position: absolute;
        height: 1.3125rem;
        #{$right}: 0;
        top: 0.8125rem;
      }
    }
  }

  .menu__list {
    li.promo-panel--mobile-list {
      @include breakpoint($tablet) {
        display: none;
      }
    }
  }
}

.toggle--sign {
  @include breakpoint($only-mobile) {
    color: $header_mobile_menu_close;
  }

  position: fixed;
  top: 0;
  background: $header_toggle_sign_default;
  z-index: 10;
  transition: #{$left 0.5s ease-in-out};
  -moz-transform: translateZ(0);
  #{$left}: -100%;
  width: 84.375%;
  font-size: 0;

  .one {
    @include breakpoint($only-tablet) {
      font-family: $alshaya-bold;
      font-weight: normal;
    }

    font-family: $alshaya-thin;
    font-size: 14px;
    padding: 0.9rem 1rem;
    display: inline-block;
    vertical-align: middle;
    text-align: center;
    height: 47px;
    width: 61%;

    &.shop {
      padding: 0.9rem 2.05rem;
      width: 39%;
    }
  }

  .active {
    font-family: $alshaya-bold;
    font-weight: normal;
    color: $header_toggle_sign_active_tab;
    background: $header_toggle_sign_active_tab_bg;
    text-align: center;
  }

  .account {
    @include breakpoint($only-mobile) {
      html[lang=ar] & {
        padding: 0.9rem 0;
        font-size: 0.8125rem;

        &.active {
          font-size: 0.75rem;
        }
      }
    }
  }
}

// Tablet Specific menu width
@include breakpoint($upto-desktop) {
  .menu--active .toggle--sign {
    #{$left}: 0;
  }

  .menu--active .mobile--close {
    #{$left}: 87.375%;
  }

  .main--menu ul.menu--one__list {
    width: 84.375%;
  }
}

// Toggle between Accounts
@include breakpoint($upto-desktop) {
  .remove--toggle {
    display: none !important;
  }
}

.logged-out {
  .account--logged_in {
    display: none;
  }
}

.logged-in {
  .account {
    display: none;
  }

  .c-menu-primary {
    @include breakpoint($only-mobile) {
      .my-account-nav a {
        padding: 0;
      }
    }
  }

  &.toolbar-horizontal {
    .toggle--sign {
      top: 79px;
    }

    ul.menu--one__list {
      top: 129px;
    }

    .mobile--close {
      top: 89px;
    }
  }

  &.toolbar-vertical {
    .toggle--sign {
      top: 40px;
    }

    ul.menu--one__list {
      top: 86px;
    }

    .mobile--close {
      top: 50px;
    }

    .c-my-account-nav {
      top: 86px;
    }
  }

  .toggle--sign {
    top: 0;
  }

  ul.menu--one__list {
    top: 2.9rem;
  }

  .mobile--close {
    top: 10px;
  }

  @include breakpoint($desktop) {
    .block-alshayamyaccountlinks {
      display: none;
    }
  }
}

//Highlights fix
.highlighted {
  @media only screen and (min-device-width: 1195px) and (max-device-width: 1275px) {
    max-width: 10.5rem;
  }

  @media only screen and (min-device-width: 1020px) and (max-device-width: 1195px) {
    max-width: 9.5rem;
  }
}

.site-brand-home {
  margin: 0;

  a {
    display: block;
    font-size: 2rem;
    max-width: 11.875rem;

    .ie & {
      display: inline;
    }

    @include breakpoint($only-tablet) {
      max-width: 13rem;
    }

    @include breakpoint($desktop) {
      height: 2.875rem;
      max-width: 15.5625rem;
    }
  }
}

.html--overlay {
  @include breakpoint($upto-desktop) {
    overflow: hidden;
  }
}

@include breakpoint($upto-desktop) {
  .main--menu {
    display: block;
    position: fixed;
    top: 0;
    width: 100%;
    height: 100%;
    // transition: transform 0.5s ease-in-out;
    -moz-transition: #{$left 0.5s ease-in-out}; /* stylelint-disable-line */
    transition: #{$left 0.5s ease-in-out}; /* stylelint-disable-line */
    -moz-transform: translateZ(0);
    #{$left}: -100%;
    // transform: translate(#{negate-value(-100)+'%'}, 0); /* stylelint-disable-line */
    will-change: $left;
    z-index: 9;
  }

  .menu--active,
  .menu__list--active {
    // transform: translate(0, 0) !important;
    #{$left}: 0;
  }
}

.c-pre-content__region {
  @include breakpoint($desktop) {
    border-top: 1px solid $header_border;
    border-bottom: 1px solid $header_border;
    height: 2.75rem;
  }
}

html[lang='ar'] {
  .cart-link-total .price-currency.suffix {
    padding-right: 0.5rem;
  }

  .block-system-branding-block {
    .site-brand-home {
      @include breakpoint($only-tablet) {
        width: 13rem;
      }
    }

    .site-brand-home img {
      width: 8.125rem;

      @include breakpoint($only-tablet) {
        width: auto;
        height: 60px;
        max-width: 11.9375rem;
      }

      @include breakpoint($desktop) {
        width: 12.94rem;
        margin-top: -1.063rem;
      }
    }
  }
}

.main--menu .not-active {
  @include breakpoint($upto-desktop) {
    display: none;
  }
}

.main--menu .active-menu.not-active {
  @include breakpoint($upto-desktop) {
    display: block;
  }
}

.c-header .block-views-exposed-filter-blocksearch-page {
  @include breakpoint($desktop) {
    position: relative;
    left: -24px;
    top: 2px;

    html[lang=ar] & {
      right: 10px;
      top: -3px;
    }
  }
}

// Remove tap background from ios mobile and tablet devices.
html {
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}
/* ... */

