CORE-4349: Fixing background is scrollable on overlay on mobile issue.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/header/_header-primary.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/header/_header-primary.scss
@@ -1378,6 +1378,10 @@ header {
 }
 
 .html--overlay {
+  @include breakpoint($only-mobile) {
+    position: fixed;
+  }
+
   @include breakpoint($upto-desktop) {
     overflow: hidden;
   }
